refactor: remove useless route
